# deadman-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml  deadman.toml  entrypoint.sh
src/: main.rs
